fixed letter spacing

--- a/css/main.css
+++ b/css/main.css
@@ -117,7 +117,7 @@ section{
     font-size: 16px;
     text-transform: uppercase;
     font-weight: 700;
-    letter-spacing: 0.02px;
+    letter-spacing: 0.2px;
 }
 
 .profile{
